# ROS2-Autonomous-Rover-Nav2

./: .gitignore  README.md  perseverance.rviz
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/config/: nav2_params.yaml  slam_params.yaml
src/my_robot_description/launch/: mars.mission.launch.py
src/my_robot_description/models/MarsRock/: model.config  model.sdf
src/my_robot_description/models/Plane/: model.sdf
src/my_robot_description/models/box_food/: model.config  model.sdf
src/my_robot_description/models/box_food/materials/scripts/: box.material
src/my_robot_description/models/box_waste/: model.config  model.sdf
src/my_robot_description/models/box_waste/materials/scripts/: box.material
src/my_robot_description/models/falling_rock1/: model.config  model.sdf
src/my_robot_description/models/falling_rock6/: model.sdf
src/my_robot_description/models/falling_rock6/meshes/: FallingRock06.dae  FallingRock06_Collider.dae
src/my_robot_description/models/perseverance/: model.sdf  model.sdf.save
src/my_robot_description/scripts/: ocr_detector.py  random_swap.py
src/my_robot_description/worlds/: mars_mission.world
src/project/: CMakeLists.txt  package.xml
src/project/launch/: amrs_rover_launch.py
src/project/src/: Project.cpp
src/rover_interfaces/: CMakeLists.txt  package.xml
src/rover_interfaces/srv/: OcrTask.srv
